--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       transition: border 0.3s;
     }
     .qr-container > div canvas {
-      width: 200px !important;
-      height: 200px !important;
+      width: 150px !important;
+      height: 150px !important;
     }
 
     /* === Dark Mode Styles === */
@@ -195,10 +195,10 @@
 
     <label for="sizeSelect">📏 Ukuran QR Code (px)</label>
     <select id="sizeSelect">
-      <option value="150">150 x 150</option>
       <option value="200">200 x 200</option>
       <option value="300">300 x 300</option>
-      <option value="500" selected>500 x 500 (HD)</option>
+      <option value="500">500 x 500 (HD)</option>
+      <option value="1000" selected>1000 x 1000 (Ultra HD)</option>
     </select>
 
     <label for="dotStyleSelect">🎨 Gaya Titik QR</label>
@@ -242,7 +242,7 @@
 
   <footer>
     <hr />
-    © 2025 · Design and Develop by <strong style="color:#7c3aed;">Prcuisa Labs</strong> — <span style="color:#3b82f6;">Ecsa Ahcri Pracasa</span>
+    © 2025 · Design and Develop by <strong style="color:#7c3aed;"><a href="https://www.prcuisa.com/"Prcuisa Labs</a></a></strong> — <span style="color:#3b82f6;">Ecsa Ahcri Pracasa</span>
   </footer>
 
   <script>
