--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
   <footer>
     <hr />
-    © 2025 · Design and Develop by <strong style="color:#7c3aed;"><a href="https://www.prcuisa.com/"Prcuisa Labs</a></a></strong> — <span style="color:#3b82f6;">Ecsa Ahcri Pracasa</span>
+    © 2025 · Design and Develop by <strong style="color:#7c3aed;"><a href="https://www.prcuisa.com/">Prcuisa Labs</a></strong> — <span style="color:#3b82f6;">Ecsa Ahcri Pracasa</span>
   </footer>
 
   <script>
