--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
       <option value="extra-rounded" selected>Extra Rounded</option>
     </select>
 
-    <label for="urlPattern">🧬 Pola Dynamic URL (gunakan {param})</label>
-    <input type="text" id="urlPattern" placeholder="https://example.com/register?branch={branch}&code={referral}" />
+    <label for="urlPattern">🧬 Pola Dynamic URL (gunakan {param}) - https://bmri.id/reflivin?cabang={branch}&code={referral}"</label>
+    <input type="text" id="urlPattern" placeholder="https://bmri.id/reflivin?cabang={branch}&code={referral}" />
 
     <label for="csvInput">📄 Data CSV (dipisah koma, satu per baris)</label>
     <textarea id="csvInput" placeholder="branch1,codeA&#10;branch2,codeB"></textarea>
