--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <option value="extra-rounded" selected>Extra Rounded</option>
     </select>
 
-    <label for="urlPattern">🧬 Pola Dynamic URL https://bmri.id/reflivin?deep_link_sub1={param}&deep_link_sub2={param}""</label>
+    <label for="urlPattern">🧬 Pola Dynamic URL https://bmri.id/reflivin?deep_link_sub1={param}&deep_link_sub2={param}</label>
     <input type="text" id="urlPattern" placeholder="https://bmri.id/reflivin?deep_link_sub1={cabang}&deep_link_sub2={referral}" />
 
     <label for="csvInput">📄 Data CSV (dipisah koma, satu per baris)</label>
